Happy Path step 5, 6. Cria nova remessa e adiciona no banco de dados com configuração de cache
